--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@flyerhq/react-native-chat-ui": "^1.4.3",
+    "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.5",
     "react-native-safe-area-context": "^4.5.0"
