--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "generate-apk": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "@flyerhq/react-native-chat-ui": "^1.4.3",
